--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     
     <script src="test.js"></script>
+        <script src="test.js"></script>
+            <script src="test.js"></script>
+                <script src="test.js"></script>
 </body>
 
 </html>
